<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicTacToe</string>
    <string name="first_human">You go first.</string>
    <string name="turn_human">Your turn.</string>
    <string name="action_settings">Settings</string>
    <string name="turn_computer">Android\'s turn.</string>
    <string name="result_tie">It\'s a tie.</string>
    <string name="result_human_wins">You won.</string>
    <string name="result_android_wins">computer wins.</string>




    <string name="one">1.</string>
    <string name="two">2.</string>
    <string name="three">3.</string>
    <string name="four">4.</string>
    <string name="five">5.</string>
    <string name="six">6.</string>
    <string name="seven">7.</string>
    <string name="eight">8.</string>
    <string name="nine">9.</string>
    <string name="info">Info</string>

    <string name="human">Human</string>
    <string name="ties">Ties</string>
    <string name="android">Comp</string>

    <string name="contact_heading">Contact info.</string>
    <string name="contact_info">
    Name: Indie Dev\n

    </string>

    <string name="about_heading">This app allows you to play\n
    of tic tac toe against the computer.
    </string>




</resources>